# atc_meta_package

./: .project  README.client.txt  log.txt
atc_msgs/: CMakeLists.txt  README.md
atc_stm/: .cproject  .project  CMakeLists.txt
atc_stm/include/: astm_enums.h
atc_stm/src/: StateTransitionManager.cpp  StateTransitionManager.h  atc_stm_main.cpp  callbacks.cpp  callbacks.h  stm_utils.cpp  stm_utils.h  test_stub.cpp
atc_stm/src/AprilTagLogic/: AprilTagLogic.cpp  AprilTagLogic.cpp.save  AprilTagLogic.h  apriltag_utils.cpp  apriltag_utils.h
atc_stm/src/DetectorLogic/: DetectorLogic.cpp  DetectorLogic.h
atc_stm/src/ManualModeLogic/: ManualModeLogic.cpp  ManualModeLogic.h
atc_stm/src/WaypointLogic/: WaypointLogic.cpp  WaypointLogic.h  waypoints_server.cpp
atc_utils/: .cproject  .project  CMakeLists.txt  CMakeLists.txt.bkup
atc_utils/src/: atc_utils.cpp
atc_waypoints/: CMakeLists.txt  package.xml
atc_waypoints/include/: waypointPanel.h  waypoints_tool.h
atc_waypoints/src/: debug_waypoints.cpp  waypointPanel.cpp  waypoints_tool.cpp
rviz_atc_plugins/: CMakeLists.txt  README.txt
rviz_atc_plugins/launch/: rviz_atc_plugins.launch
rviz_atc_plugins/src/: ImageTrackerInfo.cpp  ImageTrackerInfo.h  angles.h.bkup  drive_widget.cpp  drive_widget.h  image_click_tool.cpp  image_click_tool.h  image_tracker_display.cpp  image_tracker_display.h  image_tracker_panel.cpp  image_tracker_panel.h
